--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -66,6 +66,7 @@
             <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
         </Menu>
         <Menu mnemonicParsing="false" text="Search">
+            <MenuItem mnemonicParsing="false" onAction="#findInView" text="Find Star in View..."/>
             <MenuItem mnemonicParsing="false" onAction="#runQuery" text="Show Query Dialog..."/>
         </Menu>
         <Menu mnemonicParsing="false" text="Reports">
