--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -45,7 +45,7 @@
             <CheckMenuItem fx:id="toggleRoutesMenuitem"
                            mnemonicParsing="false"
                            onAction="#toggleRoutes"
-                           text="Toggle  Routes"/>
+                           text="Toggle Routes"/>
             <SeparatorMenuItem/>
             <CheckMenuItem fx:id="toggleSidePaneMenuitem"
                            mnemonicParsing="false"
@@ -66,7 +66,8 @@
             <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
         </Menu>
         <Menu mnemonicParsing="false" text="Search">
-            <MenuItem mnemonicParsing="false" onAction="#findDistanceBetweenStars" text="Find Distance Between Stars..."/>
+            <MenuItem mnemonicParsing="false" onAction="#findDistanceBetweenStars"
+                      text="Find Distance Between Stars..."/>
             <MenuItem mnemonicParsing="false" onAction="#findInView" text="Find Star in View..."/>
             <MenuItem mnemonicParsing="false" onAction="#runQuery" text="Show Query Dialog..."/>
         </Menu>
@@ -88,6 +89,8 @@
             <ToggleButton fx:id="toggleStemBtn" mnemonicParsing="false" onAction="#toggleGridExtensions"
                           text="Extensions"/>
             <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false" onAction="#toggleScale" text="Scale"/>
+            <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false" onAction="#toggleRoutes" text="Routes"/>
+            <Separator/>
             <ToggleButton fx:id="toggleSettings" mnemonicParsing="false" onAction="#toggleSidePane" text="Side Pane"/>
             <ToggleButton fx:id="toggleZoomInBtn" mnemonicParsing="false" onAction="#zoomIn" text="+"/>
             <ToggleButton fx:id="toggleZoomOutBtn" mnemonicParsing="false" onAction="#zoomOut" text="-"/>
