--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -51,6 +51,10 @@
                            mnemonicParsing="false"
                            onAction="#toggleRoutes"
                            text="Toggle Routes"/>
+            <CheckMenuItem fx:id="toggleTransitsMenuitem"
+                           mnemonicParsing="false"
+                           onAction="#toggleTransit"
+                           text="Toggle Transits"/>
             <SeparatorMenuItem/>
             <CheckMenuItem fx:id="toggleSidePaneMenuitem"
                            mnemonicParsing="false"
@@ -71,8 +75,8 @@
             <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
         </Menu>
         <Menu mnemonicParsing="false" text="Search">
-            <MenuItem mnemonicParsing="false" onAction="#findDistanceBetweenStars"
-                      text="Find Distance Between Stars..."/>
+            <MenuItem mnemonicParsing="false" onAction="#transitFinder"
+                      text="Find Transits Between Stars..."/>
             <MenuItem mnemonicParsing="false" onAction="#findInView" text="Find Star in View..."/>
             <MenuItem mnemonicParsing="false" onAction="#runQuery" text="Show Query Dialog..."/>
         </Menu>
@@ -97,6 +101,7 @@
                           text="Extensions"/>
             <ToggleButton fx:id="toggleScaleBtn" mnemonicParsing="false" onAction="#toggleScale" text="Scale"/>
             <ToggleButton fx:id="toggleRoutesBtn" mnemonicParsing="false" onAction="#toggleRoutes" text="Routes"/>
+            <ToggleButton fx:id="toggleTransitsBtn" mnemonicParsing="false" onAction="#toggleTransit" text="Transits"/>
             <Separator/>
             <ToggleButton fx:id="toggleSettings" mnemonicParsing="false" onAction="#toggleSidePane" text="Side Pane"/>
             <ToggleButton fx:id="toggleZoomInBtn" mnemonicParsing="false" onAction="#zoomIn" text="+"/>
