--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -79,7 +79,7 @@
                            onAction="#toggleTransit"
                            selected="true"
                            text="Toggle Transits"/>
-            <CheckMenuItem mnemonicParsing="false"
+            <CheckMenuItem fx:id="toggleTransitLengthsMenuitem" mnemonicParsing="false"
                            onAction="#toggleTransitLengths"
                            selected="true"
                            text="Toggle Transit Lengths"/>
